--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build"
+    "build": "ng build"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^8.0.6",
-    "@angular/compiler-cli": "^8.0.3",
     "@angular/animations": "^8.0.0",
     "@angular/cdk": "^8.0.1",
+    "@angular/cli": "^8.0.6",
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
+    "@angular/compiler-cli": "^8.0.3",
     "@angular/core": "~8.0.0",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.0.0",
@@ -27,11 +23,12 @@
     "@angular/router": "~8.0.0",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "node": "^12.7.0",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "typescript": "~3.4.3"
+    "typescript": "~3.4.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
@@ -55,7 +52,7 @@
     "typescript": "~3.4.3"
   },
   "engines": {
-    "node": "10.15.0",
+    "node": "12.7.0",
     "npm": "6.9.0"
   }
 }
